testsuite/tests/typecheck/should_fail/T13819.stderr

T13819.hs:12:10: error:
    • Couldn't match type: w0 -> A w0
                     with: A a
      Expected: a -> A a
        Actual: a -> w0 -> A w0
    • Probable cause: ‘pure’ is applied to too few arguments
      In the expression: pure @(_ -> WrappedMonad A _) @(_ -> A _) pure
      In an equation for ‘pure’:
          pure = pure @(_ -> WrappedMonad A _) @(_ -> A _) pure
      In the instance declaration for ‘Applicative A’
    • Relevant bindings include
        pure :: a -> A a (bound at T13819.hs:12:3)

T13819.hs:12:17: error:
    • Expected kind ‘* -> *’, but ‘_ -> WrappedMonad A _’ has kind ‘*’
    • In the type ‘(_ -> WrappedMonad A _)’
      In the expression: pure @(_ -> WrappedMonad A _) @(_ -> A _) pure
      In an equation for ‘pure’:
          pure = pure @(_ -> WrappedMonad A _) @(_ -> A _) pure
